move Paddle to package structure